--- a/index.html
+++ b/index.html
@@ -1,33 +1,89 @@
-<!doctype html>
-<html>
-<head>
-	<title>Hackathon Test</title>
-	<link rel="stylesheet" type="text/css" href="styles/css/jquery-ui.min.css">
-	<link rel="stylesheet" type="text/css" href="styles/css/main.css">
-</head>
-<body>
-Age: <input type="number" id="age"/><br/><br/>
-Gender: <select id="gender"><option value="m">Male</option><option value="f">Female</option></select><br/><br/>
-Weight(in Pounds): <input type="number" id="weight"/><br/><br/>
-Height(in Inches): <input type="number" id="height"/><br/><br/>
-Activity Level: <select id="activity">
-<option value="1.2">Sedentary</option>
-<option value="1.3">Lightly Active</option>
-<option value="1.4">Moderately Active</option>
-<option value="1.5">Very Active</option>
-<option value="1.6">Extra Active</option>
-</select><br/><br/><p id="msg"></p>
-<input type="button" id="calcBMI" value="Calculate"/><br/><br/><br/><br/>
-<div id="dailyPage">
-	<p id="calorieNeeds">Calore remaining: <span>0</span></p>
-	<p id="calorieConsumed">Calore consumed: <span>0</span></p>
-	Item: <input type="text" id="meal"/>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap 101 Template</title>
 
-	<ul id="itemList">
-	</ul>
-</div>
-<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
-<script type="text/javascript" src="js/jquery-ui.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
-</body>
+    <!-- Bootstrap -->
+    <link href="styles/css/bootstrap.css" rel="stylesheet">
+	<link href="styles/css/main.css" rel="stylesheet">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="container main-wrapper">
+      <div class="header">
+        <nav>
+          <ul class="nav nav-pills pull-right">
+            <li role="presentation" class="active"><a href="#">Home</a></li>
+            <li role="presentation"><a href="#">About</a></li>
+            <li role="presentation"><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <h1 class="main-heading">Project name</h1>
+      </div>
+
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+	<div class="content-box">
+		<div class="jumbotron">
+		  <div class="container">
+			<h2>Calories Remaining</h2>
+			<div class="row">
+				<div class="col-xs-12 col-lg-8">
+					<ul class="calorie-count">
+						<li></li>
+						<li>2</li>
+						<li>3</li>
+						<li>4</li>
+					</ul>
+				</div>
+				<div class="col-xs-12 col-lg-4 suggestions-container">
+					<h2>suggestions:</h2>
+					<p>1 boul sprouts
+					one Apple Gtroade
+					Protien shak
+					etc.</p>
+				</div>
+			</div>
+		  </div>		  
+		</div>
+		<p><a class="btn btn-primary btn-lg btn-block" href="#" role="button">Add Food &raquo;</a></p>
+	</div>
+    <div class="container">
+      <!-- Example row of columns -->
+       <div class="row calories-container">
+        <div class="col-md-4 column-info">
+         <h2>Callories Consumed</h2>
+         <span class="value">1000</span>
+        </div>
+        <div class="col-md-4 column-info">
+          <h2>Your Weight</h2>
+          <span class="value">52.7</span>
+       </div>
+        <div class="col-md-4 column-info">
+          <h2>Active Level</h2>
+          <span class="value">Active</span>
+        </div>
+      </div>
+
+    
+
+      <footer>
+        <p>&copy; Copyright 2015, Sapient Corporation. All rights reserved</p>
+      </footer>
+    </div>
+
+    </div>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.js"></script>
+  </body>
 </html>
