--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       </div>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
+		<div id="page1">
+		</div>
+		<div id="page2">
 	<div class="content-box">
 		<div class="jumbotron">
 		  <div class="container">
@@ -78,7 +81,7 @@
         <p>&copy; Copyright 2015, Sapient Corporation. All rights reserved</p>
       </footer>
     </div>
-
+</div>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
