calorie consumed integration changes.

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
        <div class="row calories-container">
         <div class="col-md-4 column-info">
          <h2>Callories Consumed</h2>
-         <span class="value">1000</span>
+         <span class="value" id="caloriesConsumed">1000</span>
         </div>
         <div class="col-md-4 column-info">
           <h2>Your Weight</h2>
