--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<input type="number" class="form-control" id="Age" placeholder="Enter Your Age">
 			  </div>
 			  <div class="form-group sex-container">
-			    <label for="Sex" class="form-field">Sex</label><br>
+			    <label for="Gender" class="form-field">Gender</label>
 				<label class="radio-inline">
 				  <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> Male
 				</label>
