--- a/index.html
+++ b/index.html
@@ -230,6 +230,10 @@
         <p>&copy; Copyright 2015, Sapient Corporation. All rights reserved</p>
       </footer>
     </div>
+	<button class="btn btn-primary btn-lg btn-danger btn-block" type="button">
+		<span aria-hidden="true" class="glyphicon glyphicon-remove"></span> Cross
+	</button>
+	
 </div>
     </div>
 
