--- a/index.html
+++ b/index.html
@@ -271,16 +271,44 @@
           <span class="value">Active</span>
         </div>
       </div>
-
-    
-
-      <footer>
-        <p>&copy; Copyright 2015, Sapient Corporation. All rights reserved</p>
-      </footer>
     </div>
-	<button class="btn btn-primary btn-lg btn-danger btn-block" type="button">
-		<span aria-hidden="true" class="glyphicon glyphicon-remove"></span> Cross
-	</button>
+	
+	<div class="content-box nutrition">
+        <div class="jumbotron">
+		  <div class="container">			
+			<div class="row">
+				<div class="col-lg-4">
+				  <h2>Carbohydrate </h2>          
+				  <p>23% </p>				  
+				</div>
+				<div class="col-lg-4">
+				  <h2>Protein </h2>
+				  <p>30%</p>
+			   </div>
+				<div class="col-lg-4">
+				  <h2>Fat</h2>
+				  <p>60%</p>
+				</div>
+			</div>
+			
+			<div class="row final-result">
+				<div class="col-lg-5 col-xs-5 pull-left result-box">
+				  <h2>RDI </h2>          
+				  <p>23% </p>				  
+				</div>
+				<div class="col-lg-5 col-xs-5 pull-right result-box">
+				  <h2>Calorie</h2>          
+				  <p>1000</p>				  
+				</div>
+			</div>
+			
+		  </div>		  
+		</div>
+	</div>
+	
+	<footer>
+        <p>&copy; Copyright 2015, Sapient Corporation. All rights reserved</p>
+    </footer>
 	
 </div>
     </div>
