--- a/index.html
+++ b/index.html
@@ -176,6 +176,17 @@
 					<option value="11">11</option>										
 				</select>
 			</div>
+			<div class="form-group activity-container">
+			  <label for="Activity" class="form-field">Activity</label>
+			  <select class="form-control" id="activity">
+				<option value="1.2">Sedentary</option>
+				<option value="1.3">Lightly Active</option>
+				<option value="1.4">Moderately Active</option>
+				<option value="1.5">Very Active</option>
+				<option value="1.6">Extra Active</option>
+			 </select>				
+			</div>
+			
 			<button type="button" class="btn btn-primary btn-lg btn-block" id="calcBMI">Submit</button>
 		</form>
 	 </div>
