--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
 				  </div>
 				  <div class="modal-footer">
 					<button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
+					<button class="btn btn-warning" type="button">Proceed</button>
 				  </div>
 				</div>
 			  </div>
