--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 			
 			<button type="button" class="btn btn-primary btn-lg btn-block" id="calcBMI" data-toggle="modal" data-target="#myModal">Submit</button>
 			<!-- Modal -->
-			<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal fade" id="userResult" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			  <div class="modal-dialog">
 				<div class="modal-content">
 				  <div class="modal-header">
