adding js singleton for user.

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 			 </select>				
 			</div>
 			
-			<button type="button" class="btn btn-primary btn-lg btn-block" id="calcBMI" data-toggle="modal" data-target="#myModal">Submit</button>
+			<button type="button" class="btn btn-primary btn-lg btn-block" id="calcBMI" data-toggle="modal" data-target="#userResult">Submit</button>
 			<!-- Modal -->
 			<div class="modal fade" id="userResult" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			  <div class="modal-dialog">
@@ -332,6 +332,7 @@
     <script src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="js/odometer.js"></script>
+    <script type="text/javascript" src="js/userProfile.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
