adding class to each page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-	<div id="page1">
+	<div id="page1" class="page">
 		<div class="landing-page">
 		<form>
 			  <div class="form-group age-container">
@@ -210,7 +210,7 @@
 		</form>
 	 </div>
 	</div>
-		<div id="page2">
+		<div id="page2" class="page">
 	<div class="content-box">
 		<div class="jumbotron">
 		  <div class="container">
