--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
   
     <div class="panel-heading">Shopping cart</div>
     <div class="panel-body">
-      <table class="table table-striped table-hover">
+      <table class="table table-striped table-hover" id="foodTable">
         <thead>
           <tr>
            
