--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
     <script type="text/javascript" src="js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="js/odometer.js"></script>
     <script type="text/javascript" src="js/userProfile.js"></script>
+    <script type="text/javascript" src="js/data.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
