calorie update functionality

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 				</div>
 				<div class="col-lg-5 col-xs-5 pull-right result-box">
 				  <h2>Calorie</h2>          
-				  <p>1000</p>				  
+				  <p id="calorieConsumed">1000</p>				  
 				</div>
 			</div>
 			
