calorie, protein, carbs, fats integration

--- a/index.html
+++ b/index.html
@@ -292,15 +292,15 @@
 			<div class="row">
 				<div class="col-lg-4">
 				  <h2>Carbohydrate </h2>          
-				  <p>23% </p>				  
+				  <p id="carbsPercentage">23% </p>				  
 				</div>
 				<div class="col-lg-4">
 				  <h2>Protein </h2>
-				  <p>30%</p>
+				  <p id="proteinPercentage">30%</p>
 			   </div>
 				<div class="col-lg-4">
 				  <h2>Fat</h2>
-				  <p>60%</p>
+				  <p id="fatPercentage">60%</p>
 				</div>
 			</div>
 			
