--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<label for="age" class="form-field">Age</label>
 				<input type="number" class="form-control" id="age" placeholder="Enter Your Age">
 			  </div>
-			  <div class="form-group sex-container">
+			  <div class="form-group gender-container">
 			    <label for="Gender" class="form-field">Gender</label>
 				<label class="radio-inline">
 				  <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="m"> Male
@@ -194,7 +194,7 @@
 				<div class="modal-content">
 				  <div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="myModalLabel">Modal title</h4>
+					<h4 class="modal-title" id="myModalLabel">Calorie Requirement</h4>
 				  </div>
 				  <div class="modal-body">
 					<p class="popupP">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -236,7 +236,7 @@
 		</div>
 		<p><a class="btn btn-primary btn-lg btn-block" href="#" role="button">Add Food &raquo;</a></p>
     
- <div class="form-group age-container">
+			<div class="form-group food-container">
 				<label for="Age" class="form-field">Add Your Food </label>
 				<input  class="form-control" id="foodItem" placeholder="What you have eaten today">
 			  </div>
@@ -290,15 +290,15 @@
         <div class="jumbotron">
 		  <div class="container">			
 			<div class="row">
-				<div class="col-lg-4">
-				  <h2>Carbohydrate </h2>          
+				<div class="col-lg-4 col-xs-4">
+				  <h2>Carbs </h2>          
 				  <p>23% </p>				  
 				</div>
-				<div class="col-lg-4">
+				<div class="col-lg-4 col-xs-4">
 				  <h2>Protein </h2>
 				  <p>30%</p>
 			   </div>
-				<div class="col-lg-4">
+				<div class="col-lg-4 col-xs-4">
 				  <h2>Fat</h2>
 				  <p>60%</p>
 				</div>
