--- a/index.html
+++ b/index.html
@@ -21,7 +21,32 @@
   <body>
   
       <div class="header">       
-        <h1 class="main-heading">Keep Yourself Fit</h1>
+        <header role="banner" id="top" class="navbar navbar-static-top bs-docs-nav">
+		  <div class="container">
+			<div class="navbar-header">
+			  <button data-target=".bs-navbar-collapse" data-toggle="collapse" type="button" class="navbar-toggle collapsed">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			  </button>
+			  <a class="navbar-brand" href="../">My Summary</a>
+			</div>
+			<nav class="navbar-collapse bs-navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
+			  <ul class="nav navbar-nav">
+				<li>
+				  <a href="#">My Profile</a>
+				</li>
+				<li>
+				  <a href="#">Calculation </a>
+				</li>
+				<li class="active">
+				  <a href="#">Suggestions</a>
+				</li>				
+			  </ul>     
+			</nav>
+		  </div>
+		</header>
       </div>
   <div class="container main-wrapper">
     <!-- Main jumbotron for a primary marketing message or call to action -->
