--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <![endif]-->
   </head>
   <body>
-  
+
       <div class="header">       
-        <header role="banner" id="top" class="navbar navbar-static-top bs-docs-nav">
+        <header role="banner" id="top" class="navbar navbar-static-top bs-docs-nav ">
 		  <div class="container">
 			<div class="navbar-header">
 			  <button data-target=".bs-navbar-collapse" data-toggle="collapse" type="button" class="navbar-toggle collapsed">
@@ -47,8 +47,11 @@
 			</nav>
 		  </div>
 		</header>
-      </div>
-  <div class="container main-wrapper">
+      </div>	 
+	 <div class="date-container topmargin">
+		20 February 2015
+	  </div>
+  <div class="container main-wrapper">	
     <!-- Main jumbotron for a primary marketing message or call to action -->
 	<div id="page1" class="page">
 		<div class="landing-page">
