--- a/index.html
+++ b/index.html
@@ -289,6 +289,12 @@
         <p>&copy; Copyright 2015, Sapient Corporation. All rights reserved</p>
     </footer>	
 </div>
+	<div id="page3" class="page">
+
+	</div>
+	<div id="page4" class="page">
+
+	</div>
 </div>
 
 <div class="content-box nutrition">
@@ -312,7 +318,7 @@
 					</div>
 				</div>
 				<div class="col-lg-3 col-xs-3 final-result">					         
-				    <p>1000</p>
+				    <p id="calorieConsumed">1000</p>
 					<h2>Calorie</h2> 	
 				</div>
 			</div>
