--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			  <div class="form-group gender-container">
 			    <label for="Gender" class="form-field">Gender</label>
 				<label class="radio-inline">
-				  <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="m"> Male
+				  <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="m"  checked="checked" ></inpu> Male
 				</label>
 				<label class="radio-inline">
 				  <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="f"> Female
