--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			  </button>
-			  <a class="navbar-brand" href="../">My Summary</a>
+			  <a class="navbar-brand" href="../">mFit</a>
 			</div>
 			<nav class="navbar-collapse bs-navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
 			  <ul class="nav navbar-nav">
@@ -49,7 +49,7 @@
 		</header>
       </div>	 
 	 <div class="date-container topmargin">
-		20 February 2015
+		28 February 2015
 	  </div>
   <div class="container main-wrapper">	
     <!-- Main jumbotron for a primary marketing message or call to action -->
