--- a/index.html
+++ b/index.html
@@ -290,8 +290,9 @@
     </footer>	
 </div>
 	<div id="page3" class="page">
+		<iframe src="ajax.html" border = "0" width="100%" height="200"></iframe>
 
-	</div>
+ 	</div>
 	<div id="page4" class="page">
 
 	</div>
