--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 			</div>
 		  </div>		  
 		</div>
-		<p><a class="btn btn-primary btn-lg btn-block" href="#" role="button">Add Food &raquo;</a></p>
+		
     
 			<div class="form-group food-container">
 				<label for="Age" class="form-field">Add Your Food </label>
@@ -270,7 +270,7 @@
 			  </div>
 
   
-    <div class="panel-heading">Shopping cart</div>
+    
     <div class="panel-body">
       <table class="table table-striped table-hover" id="foodTable">
         <thead>
@@ -290,7 +290,7 @@
     </footer>	
 </div>
 	<div id="page3" class="page">
-		<iframe src="ajax.html" border = "0" width="100%" height="200"></iframe>
+		<iframe src="ajax.html" border = "0" width="100%" height="200" frameborder="0"></iframe>
 
  	</div>
 	<div id="page4" class="page">
