tab name change

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 			<nav class="navbar-collapse bs-navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
 			  <ul class="nav navbar-nav">
 				<li>
-				  <a href="#" id="menu1">My Profile</a>
+				  <a href="#" id="menu1">Home</a>
 				</li>
 				<li>
-				  <a href="#" id="menu2">Calculation </a>
+				  <a href="#" id="menu2">Calorie History</a>
 				</li>
 				<li class="active">
-				  <a href="#" id="menu3">Suggestions</a>
+				  <a href="#" id="menu3">Challenge Friends</a>
 				</li>				
 			  </ul>     
 			</nav>
