--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			  </button>
-			  <a class="navbar-brand" href="../">mFit</a>
+			  <a class="navbar-brand" href="../">mFit - You Earn Your Body</a>
 			</div>
 			<nav class="navbar-collapse bs-navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
 			  <ul class="nav navbar-nav">
