--- a/ajax.html
+++ b/ajax.html
@@ -5,33 +5,37 @@
 
 	<script src="vendor/d3.v3.js"></script>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 
 	<script src="js/rickshaw.js"></script>
 </head>
 <body>
-
+<h2 class="heading">5 days Calories facts</h2>
 <div id="chart_container">
-	<div id="chart"></div>
-</div>
 
+	<div id="chart">
+
+	</div>
+<div><span><img src="./images/youtCalc.png"></span><p>Your calc</p></div>
+<div><span><img src="./images/SugestedCalc.png"></span><p>Sugested calc</p></div>
+ 
 <script>
 
 var ajaxGraph = new Rickshaw.Graph.Ajax( {
 
 	element: document.getElementById("chart"),
 	width: 320,
-	height: 200,
+	height: 100,
 	renderer: 'line',
 	dataURL: 'data/data.json',
 	onData: function(d) { d[0].data[0].y = 3000; return d },
 	series: [
 		{
-			name: 'New York',
-			color: '#c05020',
+			name: 'Sugested',
+			color: '#ff0000',
 		}, {
-			name: 'London',
-			color: '#30c020',
+			name: 'Your',
+			color: '#aeff00',
 		}
 	]
 } );
