--- a/ajax.html
+++ b/ajax.html
@@ -2,7 +2,7 @@
 <head>
 	<link type="text/css" rel="stylesheet" href="../src/css/graph.css">
 	<link type="text/css" rel="stylesheet" href="css/lines.css">
-
+	<link href="styles/css/main.css" rel="stylesheet">
 	<script src="vendor/d3.v3.js"></script>
 
 <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
@@ -16,8 +16,8 @@
 	<div id="chart">
 
 	</div>
-<div><span><img src="./images/youtCalc.png"></span><p>Your calc</p></div>
-<div><span><img src="./images/SugestedCalc.png"></span><p>Sugested calc</p></div>
+<div class="block-info"><span><img src="./images/youtCalc.png"></span><span class="text-info">Your calc</span></div>
+<div class="block-info"><span><img src="./images/SugestedCalc.png"></span><span class="text-info">Sugested calc</span></div>
  
 <script>
 
